# evnet

./: LICENSE  MANIFEST.in  README.md  data.py  pyproject.toml  requirements.txt  setup.py  subcort_tuning.py  test.sh  test_adv_attacks.py  test_corruptions.py  test_domain_shift.py  testing_utils.py  train.py  train.sh  tuning
evnet/: __init__.py  backends.py  evnet.py  modules.py  params.py
evnet/configs/: cornet-z_train.yml  efficientnet-b0_train.yml  resnet-50+prime_train.yml  resnet-50_train.yml  subcort_kwargs.yml  vone_kwargs.yml
evnet/prime/: __init__.py  diffeomorphism.py  prime_config.yml
evnet/tuning/: __init__.py  center_radius_m_cell.csv  center_radius_p_cell.csv  excitatory_radius_m_cell.csv  excitatory_radius_p_cell.csv  inhibitory_radius_m_cell.csv  inhibitory_radius_p_cell.csv  p_cell_hyperparams.csv  saturation_idx_m_cell.csv  saturation_idx_p_cell.csv  suppression_idx_m_cell.csv  suppression_idx_p_cell.csv  surround_radius_m_cell.csv  surround_radius_p_cell.csv  tuning_utils.py
evnet/utils/: __init__.py  checkpoints.py  misc.py  model_vs_human.py
